--- a/examples/index.html
+++ b/examples/index.html
@@ -7,19 +7,35 @@
 <body onload="main()">
 <canvas id="example" width="800" height="600"></canvas>
 <script type="text/javascript" src="../dist/fre.js"></script>
-<script id="vshader" type="x-shader/x-vertex">
-void main() {
-  gl_Position = vec4(0.0, 0.0, 0.0, 1.0);
-  gl_PointSize = 10.0;
-}
-</script>
-<script id="fshader" type="x-shader/x-fragment">
-void main() {
-  gl_FragColor = vec4(1.0, 0.0, 0.0, 1.0);
-}
-</script>
 <script type="text/javascript">
 function main() {
+  var sources = [];
+
+  fre.ajax('shaders/point.vert', onLoadVert, null, onError);
+  fre.ajax('shaders/point.frag', onLoadFrag, null, onError);
+
+  function onLoadVert(evt, xhr) {
+    sources[0] = xhr.response;
+    loaded();
+  }
+
+  function onLoadFrag(evt, xhr) {
+    sources[1] = xhr.response;
+    loaded();
+  }
+
+  function onError(evt) {
+    console.log(evt);
+  }
+
+  function loaded() {
+    if (sources.length === 2) {
+      initialize(sources);
+    }
+  }
+}
+
+function initialize(shaderSources) {
   var canvas = document.getElementById('example'),
     gl = fre.gl.getWebGLContext(canvas);
 
@@ -28,7 +44,7 @@ function main() {
     return;
   }
 
-  var program = fre.gl.createProgramWithScripts(gl, ['vshader', 'fshader']);
+  var program = fre.gl.createProgramWithSources(gl, shaderSources);
   if (!program) {
     console.log('Error en la creación del programa.');
   }
