--- a/examples/index.html
+++ b/examples/index.html
@@ -37,7 +37,7 @@ function main() {
 
 function initialize(shaderSources) {
   var canvas = document.getElementById('example'),
-    gl = fre.gl.getWebGLContext(canvas);
+      gl = fre.gl.getWebGLContext(canvas);
 
   if (!gl) {
     console.log('No se pudo obtener el contexto de renderizado para WebGL.');
@@ -46,16 +46,24 @@ function initialize(shaderSources) {
 
   var program = new fre.gl.Program(shaderSources);
 
-  program.attributes.a_Position.set(new Float32Array([0.5, 0.5, 0.0, 1.0]));
+  var points = [0.0, 0.5, -0.5, -0.5, 0.5, -0.5];
+  var TypedArray = fre.gl.getTypedArrayByType(program.attributes.a_Position.type);
+  if (TypedArray) {
+    points = new TypedArray(points);
+  }
+
+  var buffer = new fre.gl.Buffer(gl.ARRAY_BUFFER, points, gl.STATIC_DRAW);
+
+  program.attributes.a_Position.setPointer(buffer.webGLBuffer, 2);
 
   gl.useProgram(program.webGLProgram);
 
-  program.uniforms.u_FragColor.set(new Float32Array([1.0, 1.0, 0.0, 1.0]));
+  program.uniforms.u_FragColor.set([1.0, 1.0, 0.0, 1.0]);
 
   gl.clearColor(0.0, 0.0, 0.0, 1.0);
   gl.clear(gl.COLOR_BUFFER_BIT);
 
-  gl.drawArrays(gl.POINTS, 0, 1);
+  gl.drawArrays(gl.TRIANGLES, 0, 3);
 }
 </script>
 </body>
