Refactoriza los ejemplos.

--- a/examples/projecting/index.html
+++ b/examples/projecting/index.html
@@ -19,6 +19,7 @@
   <p id="animation-perspective">Selecciona el canvas y usa las flechas para mover la cámara</p>
 </div>
 <script type="text/javascript" src="../../dist/fre.js"></script>
+<script type="text/javascript" src="../shadersLoader.js"></script>
 <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
