--- a/examples/triangle/index.html
+++ b/examples/triangle/index.html
@@ -7,6 +7,7 @@
 <body onload="main()">
 <canvas id="example-triangle" width="400" height="400"></canvas>
 <script type="text/javascript" src="../../dist/fre.js"></script>
+<script type="text/javascript" src="../shadersLoader.js"></script>
 <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
